<resources>
    <string name="app_name">Unsplash</string>
    <string name="onboarding_image">onboarding image</string>
    <string name="onboarding_title_1">UPLOAD</string>
    <string name="onboarding_title_2">EXPLORE</string>
    <string name="onboarding_title_3">DOWNLOAD</string>
    <string name="onboarding_text_1">Share your images with millions of people around the world. Upload a photo.</string>
    <string name="onboarding_text_2">Unsplash has over a million free high-resolution photos. Explore these popular photo categories on Unsplash.</string>
    <string name="onboarding_text_3">Beautiful images and photos that you can download and use for any project. The photos are free to use.</string>
    <string name="onboarding_get_started_button_text">Get started</string>
    <string name="action_next">Next</string>
    <string name="action_skip">SKIP</string>
    <string name="onboarding_prefs">onboarding_prefs</string>
    <string name="onboarding_finished">onboarding_finished</string>
    <string name="welcome_text">Welcome to ImageIn</string>
    <string name="progress">%1$d%%</string>
    <string name="auth_failed">Authorization failed. Please try again.</string>
    <string name="auth_succeeded">You have been logged in successfully.</string>
    <string name="retry">Retry</string>
    <string name="authorization_image">authorization image</string>
    <string name="sign_in_button">Sign in</string>
    <string name="sign_in_text">Sign in to your Unsplash account to continue.</string>
    <string name="home">Home</string>
    <string name="collections_fragment">Collections</string>
    <string name="profile">Profile</string>
    <string name="location_icon">location icon</string>
    <string name="email_icon">email icon</string>
    <string name="mailto_icon">mailto icon</string>
    <string name="downloads_icon">downloads icon</string>
    <string name="nav_profile">PROFILE</string>
    <string name="nav_feed">FEED</string>
    <string name="logout_icon">logout icon</string>
    <string name="search_icon">search icon</string>
    <string name="photos">Photos\n%1$d</string>
    <string name="likes">Likes \n%1$d</string>
    <string name="collections">Collections \n%1$d</string>
    <string name="photo">photo</string>
    <string name="love_icon">love icon</string>
    <string name="download_count_icon">download count icon</string>
    <string name="download_photo_icon">download photo icon</string>
    <string name="top">TODAY\'S TOP</string>
    <string name="username">\@%1$s</string>
    <string name="no_connection">No internet connection</string>
    <string name="no_internet">No internet connection. Cached data is shown.</string>
    <string name="feed_photo">PHOTO</string>
    <string name="feed_photo_content">Feed photo</string>
    <string name="photo_details_title">PHOTO DETAILS</string>
    <string name="made_with">Made with: %1$s</string>
    <string name="model">Model: %1$s</string>
    <string name="exposure">Exposure: %1$s</string>
    <string name="aperture">Aperture: %1$s</string>
    <string name="focal_length">Focal length: %1$s</string>
    <string name="iso">ISO: %1$s</string>
    <string name="about">About \@%1$s:\n%2$s</string>
    <string name="download">Download</string>
    <string name="location">Country: %1$s, City: %2$s</string>
    <string name="tag">Tags: %1$s</string>
    <string name="search">Search</string>
    <string name="share">Share</string>
    <string name="perm_all">Permissions required to download file.</string>
    <string name="perm_settings">Change permissions in app settings</string>
    <string name="btn_ok">OK</string>
    <string name="btn_grant">Grant</string>
    <string name="btn_cancel">Cancel</string>
    <string name="download_succeeded">Download succeeded.</string>
    <string name="open">Open</string>
    <string name="back_button_navigation">back button navigation</string>
    <string name="oops_error_loading_data">Oops! Error loading data.</string>
    <string name="latest">Order by latest</string>
    <string name="oldest">Order by oldest</string>
    <string name="popular">Order by popular</string>
    <string name="no_results_icon">no results icon</string>
    <string name="no_results_found">No results found</string>
    <string name="sign_in">SIGN IN</string>
    <string name="download_photo_button">download photo button</string>
</resources>