<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/findAction"
        android:icon="@drawable/ic_search"
        android:iconTint="@color/black"
        android:title="@string/latest"
        app:showAsAction="ifRoom"
        tools:targetApi="o" />
    <item
        android:id="@+id/orderByLatestAction"
        android:title="@string/latest"
        app:showAsAction="collapseActionView"
        tools:targetApi="o" />
    <item
        android:id="@+id/orderByOldestAction"
        android:title="@string/oldest"
        app:showAsAction="collapseActionView"
        tools:targetApi="o" />
    <item
        android:id="@+id/orderByPopularAction"
        android:title="@string/popular"
        app:showAsAction="collapseActionView"
        tools:targetApi="o" />
</menu>